# llm-midi-analyzer

./: .env.example  .gitignore  README.md  SYSTEM_ARCHITECTURE.md  pyproject.toml  run.sh  tree.txt
.agents/rules/: python-code.md
agent-commit/: OmniLLM-Muse MIDI Analysis Integration.md  test.md
llm-midi-analyzer/: README.md
llm-midi-analyzer/midi/: #20_Bb_major.mid
llm-midi-analyzer/output/: adapter_log.jsonl
llm-midi-analyzer/output/vqvae/: codebook_usage_m1.npy  codebook_usage_m4.npy  indices_m1.npy  recon_x.npy  report.txt  sample_indices_m1.npy  sample_indices_m4.npy
llm-midi-analyzer/output/vqvae/midi/: sample_00_orig.mid  sample_00_recon.mid  sample_01_orig.mid  sample_01_recon.mid  sample_02_orig.mid  sample_02_recon.mid  sample_03_orig.mid  sample_03_recon.mid  sample_04_orig.mid  sample_04_recon.mid  sample_05_orig.mid  sample_05_recon.mid  sample_06_orig.mid  sample_06_recon.mid  sample_07_orig.mid  sample_07_recon.mid  sample_08_orig.mid  sample_08_recon.mid  sample_09_orig.mid  sample_09_recon.mid  sample_10_orig.mid  sample_10_recon.mid  sample_11_orig.mid  sample_11_recon.mid  sample_12_orig.mid  sample_12_recon.mid  sample_13_orig.mid  sample_13_recon.mid  sample_14_orig.mid  sample_14_recon.mid  sample_15_orig.mid  sample_15_recon.mid  sample_16_orig.mid  sample_16_recon.mid  sample_17_orig.mid  sample_17_recon.mid  sample_18_orig.mid  sample_18_recon.mid  sample_19_orig.mid  sample_19_recon.mid
llm-midi-analyzer/src/: CAG_RAG_flow.md  app.py  app_web.py  cag.py  compare.py  config.py  data_loader.py  gemini_service.py  generate_analysis.py  generate_analysis_v3.py  graph_rag.py  inspect_vqvae.py  music21_analyzer.py  preprocess_midi.py  test_cag_qwen_final.py  train_adapter.py
llm-midi-analyzer/src/core/: analyzer.py  logic_engine.py
llm-midi-analyzer/src/models/: adapter.py  adapters.py  octuple.py  vqvae.py  vqvae_standard.py
llm-midi-analyzer/src/services/: llm_factory.py  unsloth_engine.py
llm-midi-analyzer/src/static/: app.js  index.html  style.css
llm-midi-analyzer/src/trainer/: vqvae_trainer.py
llm-midi-analyzer/tests/: test_cag.py  test_gemini.py  test_rag.py
llm-midi-analyzer/unsloth_compiled_cache/: UnslothAlignPropTrainer.py  UnslothBCOTrainer.py  UnslothCPOTrainer.py  UnslothDDPOTrainer.py  UnslothDPOTrainer.py  UnslothGKDTrainer.py  UnslothGRPOTrainer.py  UnslothKTOTrainer.py  UnslothNashMDTrainer.py  UnslothORPOTrainer.py  UnslothOnlineDPOTrainer.py  UnslothPPOTrainer.py  UnslothPRMTrainer.py  UnslothRLOOTrainer.py  UnslothRewardTrainer.py  UnslothSFTTrainer.py  UnslothXPOTrainer.py
llm-midi-analyzer/wave-roll/: LICENSE  package.json
llm-midi-analyzer/wave-roll/src/: web-component.ts
midi/: no.11_260314_v34.mid  no.16_260318_v6.mid
old/midi/: 251103_9.mid  no.12_v2.mid
old/output/#20_Bb_major/: #20_Bb_major_analysis.json
old/output/251103_9/: 251103_9_analysis.json  251103_9_analysis_report.md
old/output/bach-fugue-g-minor-organ/: bach-fugue-g-minor-organ_analysis_report.md
old/output/no.16_260318_v6/: no.16_260318_v6_analysis_report.md
old/src/test/: midi_analysis.py
output/bach-fugue-g-minor-organ/: bach-fugue-g-minor-organ_analysis.json
output/no.16_260318_v6/: no.16_260318_v6_analysis.json
src/: app.py
src/test/: test_analyzer.py  test_representation.py
