[project]
name = "llm-midi-analyzer"
version = "0.1.0"
description = ""
authors = [
    {name = "JiaLong0209",email = "smt02091395@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "music21 (>=9.9.1,<10.0.0)",
    "google-generativeai (>=0.8.6,<0.9.0)",
    "google-genai (>=1.66.0,<2.0.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "pygame (>=2.6.1,<3.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "tqdm (>=4.67.3,<5.0.0)",
    "scipy (>=1.17.1,<2.0.0)",
    "huggingface-hub (>=0.30.0,<1.0.0)",
    "datasets (>=3.6.0,<4.0.0)",
    "pretty-midi (>=0.2.11,<0.3.0)",
    "h5py (>=3.16.0,<4.0.0)",
    "miditok (>=3.0.6.post1,<4.0.0)",
    "symusic (>=0.6.0,<0.7.0)",
    "transformers (>=4.51.3)",
    "xformers (>=0.0.30)",
    "torchvision",
#    "vllm (>=0.7.0)",
    "librosa",
    "midi2audio",
    "mido",
    "anticipation @ git+https://github.com/jthickstun/anticipation.git",
    "typing-extensions",
    "peft (>=0.19.1,<0.20.0)",
    "tiktoken (>=0.12.0,<0.13.0)",
    "unsloth (>=2026.5.2)",
    "tensorboard",
    "questionary (>=2.1.1,<3.0.0)",
    "pypdf (>=6.11.0,<7.0.0)",
    "matplotlib (>=3.10.9,<4.0.0)",
    "fastapi (>=0.136.1,<0.137.0)",
    "uvicorn (>=0.47.0,<0.48.0)",
    "python-multipart (>=0.0.28,<0.0.29)",
    "torchao (==0.13.0)",
    "tokenizers (>=0.21.0,<0.22.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
torch = ">=2.10.0,<2.11.0"
